--- a/pixiv.css
+++ b/pixiv.css
@@ -7,6 +7,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  background: url("https://t.mwm.moe/fj") no-repeat center center fixed;
+  background-size: cover;
+  overflow: hidden;
+  backdrop-filter: blur(10px);
 }
 
 .container {
@@ -15,15 +19,18 @@ body {
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
+  backdrop-filter: blur(10px); /* 添加模糊效果 */
 }
 
 h1 {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 24px;
 }
 
 label {
   font-weight: bold;
+  font-size: 16px;
 }
 
 input,
@@ -34,6 +41,7 @@ select {
   border: 1px solid #ccc;
   width: 100%;
   box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+  font-size: 14px;
 }
 
 button {
@@ -45,6 +53,7 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  font-size: 16px;
 }
 
 button:hover {
@@ -89,24 +98,12 @@ button:hover {
 footer {
   text-align: center;
   margin-top: 20px;
+  font-size: 14px;
+  backdrop-filter: blur(10px);
 }
 
-.backgroundButtons {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.backgroundButtons button {
-  margin-right: 10px;
-}
-
-/* 手机端样式 */
-@media (max-width: 767px) {
-  body {
-    background: url("https://t.mwm.moe/fj") no-repeat center center fixed;
-    background-size: cover;
-  }
-
+/* 响应式样式 */
+@media screen and (orientation: landscape) {
   .container {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -121,16 +118,11 @@ footer {
     border: 1px solid #ccc;
     width: 100%;
     box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+    font-size: 12px;
   }
 }
 
-/* PC端样式 */
-@media (min-width: 768px) {
-  body {
-    background: url("https://t.mwm.moe/fj") no-repeat center center fixed;
-    background-size: cover;
-  }
-
+@media screen and (orientation: portrait) {
   .container {
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
@@ -145,5 +137,6 @@ footer {
     border: 1px solid #ccc;
     width: 100%;
     box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
   }
 }
