--- a/pixiv.css
+++ b/pixiv.css
@@ -98,6 +98,7 @@ footer {
   text-align: center;
   margin-top: 20px;
   font-size: 14px;
+  border-radius: 10px;
   backdrop-filter: blur(10px);
 }
 
